[package]
name = "tracing-throttle"
version = "0.4.2"
edition = "2021"
authors = ["Joris Hartog"]
license = "MIT"
description = "High-performance log deduplication and rate limiting for the tracing ecosystem"
repository = "https://github.com/nootr/tracing-throttle"
documentation = "https://docs.rs/tracing-throttle"
readme = "README.md"
keywords = ["tracing", "logging", "rate-limiting", "deduplication", "throttle"]
categories = ["development-tools::debugging", "asynchronous"]
rust-version = "1.70"

[dependencies]
# Core tracing support
tracing = "0.1.41"
tracing-subscriber = "0.3.20"

# Fast hashing
ahash = "0.8.12"

# Concurrent data structures
dashmap = "6.1"

# Time handling
tokio = { version = "1.48", features = ["time", "sync", "rt", "rt-multi-thread", "macros"], optional = true }

# Redis storage (optional)
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"], optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
bincode = { version = "1.3", optional = true }

[dev-dependencies]
tracing-throttle = { path = ".", features = ["test-helpers"] }
tokio = { version = "1", features = ["full", "test-util"] }
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
criterion = { version = "0.5", features = ["html_reports"] }

[features]
default = ["async", "human-readable"]
async = ["tokio"]
human-readable = []
redis-storage = ["redis", "serde", "bincode", "tokio"]
test-helpers = []

[[example]]
name = "basic"
required-features = []

[[example]]
name = "policies"
required-features = []

[[example]]
name = "redis"
required-features = ["redis-storage"]

[[example]]
name = "summaries"
required-features = ["async"]

[[bench]]
name = "rate_limiting"
harness = false
